--- a/_sass/_user_vars.scss
+++ b/_sass/_user_vars.scss
@@ -39,14 +39,14 @@
 // $header-background-opacity: 0.35;
 // $header-background-invert: 100%;
 
-// // theme #6
-// $primary-color:  #116466;
-// $accent-color: #ffcb9a;
-// $title-color: #2c3531;
-// $header-color: #116466;
-// $header-text-color: #fff;
-// $header-background-opacity: 0.5;
-// $header-background-invert: 0%;
+// theme #6
+$primary-color:  #116466;
+$accent-color: #ffcb9a;
+$title-color: #2c3531;
+$header-color: #116466;
+$header-text-color: #fff;
+$header-background-opacity: 0.5;
+$header-background-invert: 0%;
 
 // // theme #7
 // $primary-color:  #994c5f;
@@ -84,11 +84,11 @@
 // $header-background-opacity: 0.4;
 // $header-background-invert: 100%;
 
-// theme #11
-$primary-color:  #9e5a63;
-$accent-color: #314455;
-$title-color: #644e5b;
-$header-color: #c96567;
-$header-text-color: #fff;
-$header-background-opacity: 0.4;
-$header-background-invert: 100%;
+// // theme #11
+// $primary-color:  #9e5a63;
+// $accent-color: #314455;
+// $title-color: #644e5b;
+// $header-color: #c96567;
+// $header-text-color: #fff;
+// $header-background-opacity: 0.4;
+// $header-background-invert: 100%;
